@@ -7,6 +7,6 @@ from flask_login import current_user, login_required, login_user
 from app import app
 from schema import db
 from tables import *
-from utils import check_authentication, get_current_book
+from utils import get_current_book
 from auth import facebook
 from config import *
